Aggiunti elementi nella pagina iniziale e stili della pagina

--- a/pages/login.html
+++ b/pages/login.html
@@ -11,7 +11,9 @@
 
     <body class="text-center">
         <form action="validateLogin.php" class="form-signin" method="post" name="form-login" onsubmit="validaForm()">
-            <img class="mb-4" src="../bootstrap/assets/brand/bootstrap-logo.svg" width="72"/>
+            <a href="../index.php">
+                <img class="mb-4" src="../bootstrap/assets/brand/bootstrap-logo.svg" width="72"/>
+            </a>
             <h1 class="h3 mb-3 font-weight-normal">Effettua il login</h1>
             <input type="email" name="inputEmail" class="form-control" placeholder="Email" required autofocus/>
             <input type="password" name="inputPassword" class="form-control" placeholder="Password" required/>
