--- a/pages/utils/footer.html
+++ b/pages/utils/footer.html
@@ -1,6 +1,6 @@
 <div class=" fixed-bottom">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
-      <p class="col-md-4 mb-0 text-muted">&copy; 2022 Progetto_LTW</p>
+      <p class="col-md-4 mb-0 text-muted px-5">&copy; 2022 Progetto_LTW</p>
   
       <a href="index.php" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
         <img src="bootstrap/assets/img/favicons/favicon-32x32.png" alt="mdo" width="40" height="40" class="rounded-3">
